mdapipkg/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Member</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>3rd Pary Validated</fullName>
        </values>
        <values>
            <fullName>Applied</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Code of Conduct</fullName>
        </values>
        <values>
            <fullName>Cycle Open</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Payment Pending</fullName>
        </values>
        <values>
            <fullName>Payment Received</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Prospect</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>3rd Pary Validated</fullName>
        </values>
        <values>
            <fullName>Applied</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Code of Conduct</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Payment Pending</fullName>
        </values>
        <values>
            <fullName>Payment Received</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Additional_Qualifying_Company_Names__c</fullName>
        <description>Maps to Lead</description>
        <label>Additional Qualifying Company Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age_Next_Fiscal_Year__c</fullName>
        <formula>IF(
MONTH( IF(MONTH(TODAY())&gt;=6, 
DATE(YEAR(TODAY())+1,06,30),DATE(YEAR(TODAY()),06,30) 
) )&gt;MONTH(Birthdate__c),
YEAR(IF(MONTH(TODAY())&gt;=6, 
DATE(YEAR(TODAY())+1,06,30),DATE(YEAR(TODAY()),06,30) 
) )-YEAR(Birthdate__c), 
IF(AND(MONTH(IF(MONTH(TODAY())&gt;=6, 
DATE(YEAR(TODAY())+1,06,30),DATE(YEAR(TODAY()),06,30) 
) ) = MONTH(Birthdate__c), DAY(TODAY()) &gt;= DAY(Birthdate__c)), 
YEAR(IF(MONTH(TODAY())&gt;=6, 
DATE(YEAR(TODAY())+1,06,30),DATE(YEAR(TODAY()),06,30) 
) )-YEAR(Birthdate__c), 
(YEAR(IF(MONTH(TODAY())&gt;=6, 
DATE(YEAR(TODAY())+1,06,30),DATE(YEAR(TODAY()),06,30) 
) )-YEAR(Birthdate__c))-1)
)</formula>
        <label>Age Next Fiscal Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>Annual Revenue (Dollar Business Volume)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Status_Historic__c</fullName>
        <label>Applicant Status (Historic)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting Application Approval</fullName>
                </value>
                <value>
                    <fullName>Awaiting RML Communication</fullName>
                </value>
                <value>
                    <fullName>Awaiting Chapter Assignment</fullName>
                </value>
                <value>
                    <fullName>Awaiting Interest</fullName>
                </value>
                <value>
                    <fullName>Awaiting 3rd Party Validation</fullName>
                </value>
                <value>
                    <fullName>Awaiting Chapter Checklist</fullName>
                </value>
                <value>
                    <fullName>Awaiting Chapter Approval</fullName>
                </value>
                <value>
                    <fullName>Awaiting Submission to YPOI</fullName>
                </value>
                <value>
                    <fullName>Submitted to YPOI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied_To_Chapter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applied To Chapter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Action__c</fullName>
        <label>Benefit Action (Historic)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Reinstate</fullName>
                </value>
                <value>
                    <fullName>Upgrade/Downgrade</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Transition to YPO Gold</fullName>
                </value>
                <value>
                    <fullName>Transition to WPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <label>Business Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Scope__c</fullName>
        <label>Business Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CartToken__c</fullName>
        <label>Cart Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_Activation_Date__c</fullName>
        <formula>KGRenewal__ContractEffectiveDate__c - $Setup.KGAdditionalSettings__c.N_Days_Before_Effective_Date_Run_Batch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cart Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cert_Status_Historic__c</fullName>
        <label>Cert Status (Historic)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Not Qualified/No Grace Year</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Voluntary Resignation</fullName>
                </value>
                <value>
                    <fullName>Pending Third Party Verification/Signature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Documentation_URL__c</fullName>
        <description>This field holds the link to the Certification Documentation if this is the chosen certification method for the opportunity.</description>
        <label>Certification Documentation URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certification_Page_Status_Exchange__c</fullName>
        <label>Certification Page Status (Exchange)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Status_Renewal_Page__c</fullName>
        <label>Certification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Status__c</fullName>
        <inlineHelpText>Self and 3rd Party Document Verification Status</inlineHelpText>
        <label>Certification Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Certification_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Submitted_Via__c</fullName>
        <label>Certification Submitted Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <label>Certification Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self Certify</fullName>
                </value>
                <value>
                    <fullName>Third Party Certify</fullName>
                </value>
                <value>
                    <fullName>No Certification Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified_Date__c</fullName>
        <description>This is for historical purposes - migration. Going forward stage changes will be date stamped with the out of the box Opportunity Stage History functionality.</description>
        <label>Certified Date (Historical)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chapter_Acceptance_Status_1__c</fullName>
        <label>Chapter Acceptance Status?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Acceptance_Status__c</fullName>
        <label>Chapter Acceptance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Chair_Approval_Date__c</fullName>
        <description>For migration</description>
        <label>Chapter Chair Approval Date (Historical)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chapter_Expressed_Interest__c</fullName>
        <label>Chapter Expressed Interest</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Chapter_Membership_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Membership Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Reject_Reason__c</fullName>
        <label>Chapter Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conflict of interest with chapter member(s)</fullName>
                </value>
                <value>
                    <fullName>Does not live within chapter geographic vicinity</fullName>
                </value>
                <value>
                    <fullName>Does not meet local chapter quantitative criteria</fullName>
                </value>
                <value>
                    <fullName>Does not suit the YPO profile</fullName>
                </value>
                <value>
                    <fullName>Lack of interest/commitment from prospect</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chapter_Rejection_Details__c</fullName>
        <description>Details of the chapter(s) that rejected application for membership from this opportunity.</description>
        <inlineHelpText>Details of the chapter(s) that rejected application for membership from this opportunity.</inlineHelpText>
        <label>Chapter Rejection Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Checker__c</fullName>
        <formula>SUBSTITUTE(Name, RIGHT(Name, 10), TEXT( Next_Fiscal_Year_Date_Start__c -1))</formula>
        <label>Checker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chpter_Chair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chapter Chair</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_of_Conduct_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Code of Conduct Accepted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conga_3rd_Party_Verification__c</fullName>
        <formula>&quot;&amp;Id=&quot; +Id +
&quot;&amp;TemplateId=a2F61000001M7r2&quot; +
&quot;&amp;ReportID=[Contact]00O2C000000VDrN?pv0=&quot; + LEFT(Contact_ID__c, 15) +
&quot;&amp;OFN=Third+Party+Verification+-+&quot;+ KGRenewal__Contact__c +
&quot;&amp;DocuSignVisible=1&quot; +
&quot;&amp;DocuSignEmailSubject=YPO+3rd+Party+Verification+Request&quot; +
&quot;&amp;DocuSignEmailBody=Please+access+and+review+the+Third+Party+Verification+request+for+&quot; + KGRenewal__Contact__r.FirstName + &quot;+&quot; +  KGRenewal__Contact__r.LastName  + &quot;+where+you+may+choose+to+either+agree+or+disagree+with+the+enclosed+information.&quot; +
&quot;&amp;DocuSignR1Name=&quot; +  Third_Party_Name__c  +
&quot;&amp;DocuSignR1Email=&quot; +  Third_Party_Email__c  +
&quot;&amp;DocuSignR1Role=Signer+1&quot;+
&quot;&amp;DocuSignR2ID=&quot;+ KGRenewal__Contact__r.Id +
&quot;&amp;DocuSignR2Type=Carbon+Copy&quot;+
&quot;&amp;DocuSignR3ID=00561000002E4V1&quot; +
&quot;&amp;DocuSignR3Type=Carbon+Copy&quot;+
&quot;&amp;DocuSignExpireVoidEnv=0&quot; +
&quot;&amp;DocuSignRemindIn=7&quot; +
&quot;&amp;DocuSignSendAsUserId=00561000002De9d&quot;+
&quot;&amp;defaultpdf=0&quot;+
&quot;&amp;DocuSignTag=1&quot; +
&quot;&amp;QMode=DocuSign&quot;+
&quot;&amp;DS7=17&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga 3rd Party Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_WF_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conga WF Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <description>For Functional purpose</description>
        <label>Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to send emails referencing contact&apos;s name</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_Setter__c</fullName>
        <defaultValue>12</defaultValue>
        <description>This defaults to 12 so that subsequent subscription products will always have a 12 month renewal.</description>
        <label>Contract End Date Setter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_in_Fiscal_Q4__c</fullName>
        <formula>IF(MONTH((Q4_Date_Testing__c))=4, TRUE,
IF(MONTH((Q4_Date_Testing__c))=5, TRUE,
IF(MONTH((Q4_Date_Testing__c))=6, TRUE,
FALSE)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created in Fiscal Q4?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNQ_A_Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For migration</description>
        <label>DNQ A (Historical)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNQ_B__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For migration of historical data</description>
        <label>DNQ B (Historical)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Local_Chapter_Dues_Paid__c</fullName>
        <label>Date Local Chapter Dues Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Third_Party_Validated__c</fullName>
        <label>Date Third Party Validated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Historical__c</fullName>
        <label>Discount (Historical)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DocuSign_Birthdate__c</fullName>
        <formula>TEXT(DAY(Birthdate__c )) &amp; &quot;/&quot; &amp; TEXT(MONTH(Birthdate__c )) &amp; &quot;/&quot; &amp; TEXT(YEAR(Birthdate__c ))</formula>
        <label>DocuSign Birthdate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Date_Today__c</fullName>
        <formula>TEXT(DAY(TODAY()))&amp;&quot;/&quot; &amp; TEXT(MONTH(TODAY()))&amp;&quot;/&quot; &amp;TEXT(YEAR(TODAY()))</formula>
        <label>DocuSign Date Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dues_Page_Status_Exchange__c</fullName>
        <label>Dues Page Status (Exchange)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dues_Status__c</fullName>
        <label>Dues Status (Deprecate)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligibility_Status__c</fullName>
        <label>Eligibility Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unverified</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enterprise_Type__c</fullName>
        <label>Enterprise Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Independent third party investment/valuation</fullName>
                </value>
                <value>
                    <fullName>Net Worth or assets before depreciation</fullName>
                </value>
                <value>
                    <fullName>Sum of public equity plus debt less cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enterprise_Value__c</fullName>
        <label>Enterprise Value (Corporation Value)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Number__c</fullName>
        <label>Event Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Type__c</fullName>
        <label>Firm Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private for Profit</fullName>
                </value>
                <value>
                    <fullName>Private Non-Profit Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Date_Start__c</fullName>
        <description>Will be populated by Kinetic Growth functionality when previous year opportunity is closed won. It will always be 7/1/upcoming year.</description>
        <label>Fiscal Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Grace_Status__c</fullName>
        <label>Grace Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Grace Needed</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IS_Notify_New_RML__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify New RML</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Introduced_to_YPOI_Via__c</fullName>
        <label>Introduced to YPOI Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online News</fullName>
                </value>
                <value>
                    <fullName>Traditional Media</fullName>
                </value>
                <value>
                    <fullName>Web Search</fullName>
                </value>
                <value>
                    <fullName>Word of Mouth</fullName>
                </value>
                <value>
                    <fullName>YPO Member</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>YPO Gold Member</fullName>
                </value>
                <value>
                    <fullName>Child of YPO/YPO Gold Member</fullName>
                </value>
                <value>
                    <fullName>WPO Member</fullName>
                </value>
                <value>
                    <fullName>Child of YPO/WPO Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Additional_Qualifying_Companies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Maps from Lead</description>
        <label>Additional Qualifying Companies?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Announced_to_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Announced to Portal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Initial_Invoice_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will help identify where in the process people are at time of migration/implementation.</description>
        <label>Initial Invoice Paid (Historical)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_New_Member_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Member Published?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Paid_Local_Chapter_Dues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Chapter Dues Paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rejected_by_Chapter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This signifies that at some point for this opportunity a chapter rejected the application for chapter membership in their chapter.</inlineHelpText>
        <label>Rejected by Chapter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Suitable_for_Another_Chapter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suitable for Another Chapter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__AdditionalReceiptEmailAddresses__c</fullName>
        <label>Additional Receipt Emails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KGRenewal__AnchorContractEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anchor Contract End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__AutoClose__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is checked, the opportunity will be marked as closed lost X days after the close date where X is the number set in the &apos;Auto Close Grace Period&apos; setting in the Kinetic Growth Configuration Settings, renewal tab.</inlineHelpText>
        <label>Auto-Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__AutoWin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Auto-Win is checked, the Opportunity will be automatically marked as &apos;Closed/Won&apos; on its Close Date. Renewals and Subscriptions will be generated as appropriate.</description>
        <inlineHelpText>If Auto-Win is checked, the Opportunity will be automatically marked as &apos;Closed/Won&apos; on its Close Date. Renewals and Subscriptions will be generated as appropriate.</inlineHelpText>
        <label>Auto-Win</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>KGRenewal__BankAccount__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BilledAmount__c</fullName>
        <description>Total amount paid by the customer, including shipping, tax, and other fees.</description>
        <inlineHelpText>Total amount paid by the customer, including shipping, tax, and other fees.</inlineHelpText>
        <label>Billed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BillingCity__c</fullName>
        <label>Billing City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BillingCountry__c</fullName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BillingFirstName__c</fullName>
        <label>Billing First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BillingFrequency__c</fullName>
        <label>Billing Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No billing</fullName>
                </value>
                <value>
                    <fullName>Single payment</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                    <default>true</default>
                    <label>Periodic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KGRenewal__BillingLastName__c</fullName>
        <label>Billing Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BillingOrganization__c</fullName>
        <label>Billing Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BillingPeriod__c</fullName>
        <description>The number entered will reflect the Billing Period.  Entering &apos;2&apos; would result in a Billing Period of every 2 months.</description>
        <inlineHelpText>The number entered will reflect the Billing Period.  Entering &apos;2&apos; would result in a Billing Period of every 2 months.</inlineHelpText>
        <label>Billing Period (in months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BillingPostalCode__c</fullName>
        <label>Billing Postal Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KGRenewal__BillingState__c</fullName>
        <label>Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>